Update MaxHeap.java